--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
     <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/interface.js"></script>
+    <script src="js/languageUtils.js"></script>
     <script src="js/translation.js"></script>
     <script src="js/app.js"></script>
 </head>
