--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!doctype HTML>
-<html>
+<html ng-app="transglobe">
 <head>
     <title>Polyglot</title>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
     <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
+    <script src="components/angular-leaflet/dist/angular-leaflet-directive.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/ui.js"></script>
     <script src="js/languageUtils.js"></script>
     <script src="js/translation.js"></script>
     <script src="js/app.js"></script>
 </head>
-<body>
-    <div id="map"></div>
+<body ng-controller="transglobeController">
+    <leaflet center="europe" id="map" defaults="defaults"></leaflet>
 </body>
 </html>
