--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <script src="components/angular-leaflet/dist/angular-leaflet-directive.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/ui.js"></script>
-    <script src="js/languageUtils.js"></script>
     <script src="js/translation.js"></script>
     <script src="js/app.js"></script>
 </head>
 <body ng-controller="transglobeController">
-    <leaflet center="europe" id="map" defaults="defaults"></leaflet>
+    <leaflet center="europe" defaults="defaults" id="map" markers="markers"></leaflet>
 </body>
 </html>
