--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <script src="js/translation.js"></script>
     <script src="js/app.js"></script>
 </head>
-<body ng-controller="transglobeController">
-    <leaflet center="europe" defaults="defaults" id="map" markers="markers"></leaflet>
+<body ng-init="showMap = false;"><div class="transglobeMap"></div>
 </body>
 </html>
