--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html ng-app="transglobe">
 <head>
     <title>Polyglot</title>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
+    <script src="components/leaflet-dist/leaflet-src.js"></script>
+    <script src="components/angular/angular.js"></script>
     <script src="components/angular-leaflet/dist/angular-leaflet-directive.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
     <script src="js/translation.js"></script>
     <script src="js/app.js"></script>
+    <link rel="stylesheet" href="components/leaflet-dist/leaflet.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body ng-init="showMap = false;"><div class="transglobeMap"></div>
 </body>
