--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     <script src="components/angular/angular.js"></script>
     <script src="components/angular-leaflet/dist/angular-leaflet-directive.js"></script>
     <script src="js/app.js"></script>
+    <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="components/leaflet-dist/leaflet.css" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
-<body ng-init="showMap = false;"><div class="transglobeMap"></div>
+<body ng-init="showMap = false;">
+    <div class="navbar navbar-inverse navbar-custom">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Polyglot</a>
+            </div>
+        </div>
+    </div>
+    <div class="transglobeMap"></div>
 </body>
 </html>
