Tweak text of about modal

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="modal-body">
             <p>Singlot stands for <i>SImultaNeous GLObal Translator</i>. It is a small personal project made without excessive pretensions.</p>
             <p>Click on any text box to write in the corresponding language. Then press the small white arrow to see your text be translated live into all other languages in the map.</p>
-            <p>This project uses <a href="//glosbe.com">Glosbe</a> as translation service.</p>
+            <p>This project was made using the <a href="//leafletjs.com">Leaflet library</a> for the map visualization and the <a href="//glosbe.com">Glosbe</a> API for the translations, among other tools.</p>
         </div>
         <div class="modal-footer">
             <button class="btn btn-default" ng-click="$close()">OK</button>
